# ts-playground

./: .gitignore  README.md  docker-compose.yaml
.github/: dependabot.yml
cinii/: .env.example  package.json  pnpm-lock.yaml  request.type.ts  rest.ts  saveArticleCreatorTable.ts  script.ts  script_forShare5-2-ndjson_to_xlsx.ts  script_forShare5-author-ndjson_to_xlsx copy 2.ts  script_forShare5-author-ndjson_to_xlsx copy.ts  script_forShare5-author-ndjson_to_xlsx.ts  script_forShare5-ndjson_to_xlsx.ts  script_forShare6-artice-ndjson_to_xlsx.ts  script_forShare6-author-ndjson_to_xlsx.ts  scripts_3_articles_details_get_author_ids.ts  scripts_4-1.ts  scripts_4-2.ts  scripts_4.ts  scripts_7-3.ts  scripts_7.ts  title_and_author_only.ts  tsconfig.json
cinii/constants/: cinii_research_response_property_name_mapper.ts  opensearch_request_param.ts  util.ts
cinii/disposable_scripts/: adjust_json.sh  adjust_to_jsonl.sh  all_sort_and_uniq copy.sh  test.sh  txt_http_line.sh
cinii/functions/: cinii_research_request.ts  opensearch_request.ts  write_file.ts
cinii/interfaces/: cinii_research_response.ts  (+4 more)
google-drive/: .env.example  .gitignore  README.md  esbuild.js  package.json  pnpm-lock.yaml  tsconfig.json
p5-babylon/: .eslintrc.json  .prettierrc.js  README.md  esbuild.js  package.json  pnpm-lock.yaml  tsconfig.json
rust/: README.md  docker-compose.yml
rust/projects/TheRustProgrammingLanguage/2/guessing_game/: Cargo.toml
rust/projects/TheRustProgrammingLanguage/2/guessing_game/src/: main.rs
typescript/: .gitignore  README.md  esbuild.js  package.json  pnpm-lock.yaml
(+34 files in other folders)
