[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# クレート
# Rustではコードのパッケージのことをクレートと呼ぶ
# クレートはCargo.tomlのdependenciesで指定
# バイナリクレート
# ライブラリクレート：他のプログラムで使用するためのコードが含まれているため、単独で実行できない（randクレートなど）（Crates.ioレジストリから取得）
[dependencies]
rand = "0.8.3"